--- a/website/index.html
+++ b/website/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Bumble & Yarn</title>
-</head>
-<body>
-  <h1>Welcome to Bumble & Yarn</h1>
-  <p>Handmade crochet and yarn creations.</p>
+  <head>
+    <title>Bumble & Yarn</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
 
-  <img src="Bumble And Yarn.jpg" width="300">
-  <img src="cactus coaster.jpg" width="300">
-  <img src="flower petal coaster.jpg" width="300">
-  <img src="flurry coaster.jpg" width="300">
-  <img src="helm coaster.jpg" width="300">
-</body>
+  <body>
+    <h1>Welcome to Bumble & Yarn</h1>
+    <p>Handmade crochet and yarn creations.</p>
+
+    <div class="gallery">
+      <img src="Bumble And Yarn.jpg" alt="Bumble & Yarn logo">
+      <img src="cactus coaster.jpg" alt="Cactus coaster">
+      <img src="flower petal coaster.jpg" alt="Flower petal coaster">
+      <img src="flurry coaster.jpg" alt="Flurry coaster">
+      <img src="helm coaster.jpg" alt="Helm coaster">
+    </div>
+  </body>
 </html>
