--- a/website/index.html
+++ b/website/index.html
@@ -1,20 +1,52 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Bumble & Yarn</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Bumble & Yarn</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <body>
-    <h1>Welcome to Bumble & Yarn</h1>
-    <p>Handmade crochet and yarn creations.</p>
+  <!-- Link to CSS -->
+  <link rel="stylesheet" href="style.css">
+</head>
 
-    <div class="gallery">
+<body>
+
+  <h1>Welcome to Bumble & Yarn</h1>
+  <p>Handmade crochet and yarn creations.</p>
+
+  <div class="gallery">
+
+    <div class="card">
       <img src="Bumble And Yarn.jpg" alt="Bumble & Yarn logo">
-      <img src="cactus coaster.jpg" alt="Cactus coaster">
-      <img src="flower petal coaster.jpg" alt="Flower petal coaster">
-      <img src="flurry coaster.jpg" alt="Flurry coaster">
-      <img src="helm coaster.jpg" alt="Helm coaster">
+      <h3>Bumble & Yarn</h3>
+      <p>Handmade crochet goods</p>
     </div>
-  </body>
+
+    <div class="card">
+      <img src="cactus coaster.jpg" alt="Cactus coaster">
+      <h3>Cactus Coaster</h3>
+      <p>$8</p>
+    </div>
+
+    <div class="card">
+      <img src="flower petal coaster.jpg" alt="Flower petal coaster">
+      <h3>Flower Petal Coaster</h3>
+      <p>$8</p>
+    </div>
+
+    <div class="card">
+      <img src="flurry coaster.jpg" alt="Flurry coaster">
+      <h3>Flurry Coaster</h3>
+      <p>$8</p>
+    </div>
+
+    <div class="card">
+      <img src="helm coaster.jpg" alt="Helm coaster">
+      <h3>Helm Coaster</h3>
+      <p>$8</p>
+    </div>
+
+  </div>
+
+</body>
 </html>
