--- a/website/index.html
+++ b/website/index.html
@@ -3,50 +3,74 @@
 <head>
   <meta charset="UTF-8">
   <title>Bumble & Yarn</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <!-- Link to CSS -->
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-  <h1>Welcome to Bumble & Yarn</h1>
-  <p>Handmade crochet and yarn creations.</p>
+  <!-- Navigation -->
+  <nav class="navbar">
+    <ul class="menu">
+      <li><a href="#">Home</a></li>
 
+      <li class="dropdown">
+        <a href="#">Shop ▾</a>
+        <ul class="dropdown-menu">
+          <li><a href="#">Coasters</a></li>
+          <li><a href="#">Custom Orders</a></li>
+        </ul>
+      </li>
+
+      <li class="dropdown">
+        <a href="#">About ▾</a>
+        <ul class="dropdown-menu">
+          <li><a href="#">Our Story</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </li>
+    </ul>
+  </nav>
+
+  <!-- Header -->
+  <h1>Welcome to Bumble & Yarn</h1>
+  <p class="subtitle">Handmade crochet and yarn creations.</p>
+
+  <!-- Product Gallery -->
   <div class="gallery">
 
     <div class="card">
       <img src="Bumble And Yarn.jpg" alt="Bumble & Yarn logo">
       <h3>Bumble & Yarn</h3>
-      <p>Handmade crochet goods</p>
+      <p class="price">Handmade crochet goods</p>
     </div>
 
     <div class="card">
       <img src="cactus coaster.jpg" alt="Cactus coaster">
       <h3>Cactus Coaster</h3>
-      <p>$8</p>
+      <p class="price">$8</p>
     </div>
 
     <div class="card">
       <img src="flower petal coaster.jpg" alt="Flower petal coaster">
       <h3>Flower Petal Coaster</h3>
-      <p>$8</p>
+      <p class="price">$8</p>
     </div>
 
     <div class="card">
       <img src="flurry coaster.jpg" alt="Flurry coaster">
       <h3>Flurry Coaster</h3>
-      <p>$8</p>
+      <p class="price">$8</p>
     </div>
 
     <div class="card">
       <img src="helm coaster.jpg" alt="Helm coaster">
       <h3>Helm Coaster</h3>
-      <p>$8</p>
+      <p class="price">$8</p>
     </div>
 
   </div>
 
 </body>
 </html>
+
+
