--- a/website/index.html
+++ b/website/index.html
@@ -7,89 +7,107 @@
 </head>
 <body>
 
-  <!-- NAV BAR -->
-  <header>
-    <nav class="navbar">
-      <ul>
-        <li><a href="#">Home</a></li>
+<header>
+  <nav class="navbar">
+    <ul class="nav-list">
+      <li><a href="#">Home</a></li>
 
-        <li class="dropdown">
-          <a href="#">Shop ▾</a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Coasters</a></li>
-            <li><a href="#">Patterns</a></li>
-          </ul>
-        </li>
+      <li class="dropdown">
+        <a href="#">Shop ▾</a>
+        <ul class="dropdown-menu">
+          <li><a href="#">Coasters</a></li>
+          <li><a href="#">Patterns</a></li>
+        </ul>
+      </li>
 
-        <li class="dropdown">
-          <a href="#">About ▾</a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Our Story</a></li>
-            <li><a href="#">Contact</a></li>
-          </ul>
-        </li>
-      </ul>
-    </nav>
-  </header>
+      <li class="dropdown">
+        <a href="#">About ▾</a>
+        <ul class="dropdown-menu">
+          <li><a href="#">Our Story</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </li>
+    </ul>
+  </nav>
+</header>
 
-  <!-- HERO -->
-  <section class="hero">
-    <h1>Welcome to Bumble & Yarn</h1>
-    <p>Handmade crochet and yarn creations.</p>
-  </section>
+<section class="hero">
+  <h1>Welcome to Bumble & Yarn</h1>
+  <p>Handmade crochet and yarn creations.</p>
+</section>
 
-  <!-- FILTERS -->
-  <div class="filters">
-    <select>
-      <option>Filter by Price</option>
-      <option>Under $10</option>
-      <option>$10 – $20</option>
-      <option>$20+</option>
-    </select>
+<div class="gallery">
+
+  <!-- PRODUCT CARD -->
+  <div class="card">
+    <img src="cactus coaster.jpg" alt="Cactus Coaster">
+    <h3>Cactus Coaster</h3>
 
     <select>
-      <option>Filter by Color</option>
-      <option>Blue</option>
-      <option>Pink</option>
+      <option>Select Color</option>
       <option>Green</option>
-      <option>Neutral</option>
+      <option>Brown</option>
+    </select>
+
+    <select>
+      <option>Select Price</option>
+      <option>$8 – Single</option>
+      <option>$20 – Set of 3</option>
     </select>
   </div>
 
-  <!-- PRODUCTS -->
-  <div class="gallery">
+  <div class="card">
+    <img src="flower petal coaster.jpg" alt="Flower Petal Coaster">
+    <h3>Flower Petal Coaster</h3>
 
-    <div class="card logo-card">
-      <img src="Bumble And Yarn.jpg" alt="Bumble & Yarn Logo">
-      <h2>Bumble & Yarn</h2>
-      <p>Handmade crochet goods</p>
-    </div>
+    <select>
+      <option>Select Color</option>
+      <option>Pink</option>
+      <option>Rainbow</option>
+      <option>White</option>
+    </select>
 
-    <div class="card">
-      <img src="cactus coaster.jpg" alt="Cactus Coaster">
-      <h3>Cactus Coaster</h3>
-      <p>$8</p>
-    </div>
-
-    <div class="card">
-      <img src="flower petal coaster.jpg" alt="Flower Petal Coaster">
-      <h3>Flower Petal Coaster</h3>
-      <p>$8</p>
-    </div>
-
-    <div class="card">
-      <img src="flurry coaster.jpg" alt="Flurry Coaster">
-      <h3>Flurry Coaster</h3>
-      <p>$8</p>
-    </div>
-
-    <div class="card">
-      <img src="helm coaster.jpg" alt="Helm Coaster">
-      <h3>Helm Coaster</h3>
-      <p>$8</p>
-    </div>
-
+    <select>
+      <option>Select Price</option>
+      <option>$8 – Single</option>
+      <option>$22 – Set of 3</option>
+    </select>
   </div>
+
+  <div class="card">
+    <img src="flurry coaster.jpg" alt="Flurry Coaster">
+    <h3>Flurry Coaster</h3>
+
+    <select>
+      <option>Select Color</option>
+      <option>Neutral</option>
+      <option>Gray</option>
+    </select>
+
+    <select>
+      <option>Select Price</option>
+      <option>$8 – Single</option>
+    </select>
+  </div>
+
+  <div class="card">
+    <img src="helm coaster.jpg" alt="Helm Coaster">
+    <h3>Helm Coaster</h3>
+
+    <select>
+      <option>Select Color</option>
+      <option>Blue</option>
+      <option>Cream</option>
+    </select>
+
+    <select>
+      <option>Select Price</option>
+      <option>$8 – Single</option>
+      <option>$24 – Set of 4</option>
+    </select>
+  </div>
+
+</div>
 
 </body>
 </html>
