--- a/website/index.html
+++ b/website/index.html
@@ -7,107 +7,108 @@
 </head>
 <body>
 
-<header>
-  <nav class="navbar">
-    <ul class="nav-list">
-      <li><a href="#">Home</a></li>
+<!-- NAVBAR -->
+<nav class="navbar">
+  <ul class="menu">
+    <li><a href="#">Home</a></li>
 
-      <li class="dropdown">
-        <a href="#">Shop ▾</a>
-        <ul class="dropdown-menu">
-          <li><a href="#">Coasters</a></li>
-          <li><a href="#">Patterns</a></li>
-        </ul>
-      </li>
+    <li class="dropdown">
+      <a href="#">Shop ▾</a>
+      <ul class="dropdown-menu">
+        <li><a href="#">Coasters</a></li>
+      </ul>
+    </li>
 
-      <li class="dropdown">
-        <a href="#">About ▾</a>
-        <ul class="dropdown-menu">
-          <li><a href="#">Our Story</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-      </li>
-    </ul>
-  </nav>
-</header>
+    <li class="dropdown">
+      <a href="#">About ▾</a>
+      <ul class="dropdown-menu">
+        <li><a href="#">Our Story</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </li>
+  </ul>
+</nav>
 
-<section class="hero">
-  <h1>Welcome to Bumble & Yarn</h1>
-  <p>Handmade crochet and yarn creations.</p>
-</section>
+<!-- HEADER -->
+<h1>Welcome to Bumble & Yarn</h1>
+<p class="subtitle">Handmade crochet and yarn creations.</p>
 
-<div class="gallery">
+<!-- PRODUCTS -->
+<section class="gallery">
 
-  <!-- PRODUCT CARD -->
   <div class="card">
-    <img src="cactus coaster.jpg" alt="Cactus Coaster">
+    <img src="cactus.jpg" alt="Cactus Coaster">
     <h3>Cactus Coaster</h3>
 
-    <select>
-      <option>Select Color</option>
-      <option>Green</option>
-      <option>Brown</option>
-    </select>
+    <div class="product-options">
+      <select>
+        <option>Select Color</option>
+        <option>Green</option>
+        <option>Pink</option>
+      </select>
 
-    <select>
-      <option>Select Price</option>
-      <option>$8 – Single</option>
-      <option>$20 – Set of 3</option>
-    </select>
+      <select>
+        <option>Select Price</option>
+        <option>$8</option>
+      </select>
+    </div>
   </div>
 
   <div class="card">
-    <img src="flower petal coaster.jpg" alt="Flower Petal Coaster">
+    <img src="flower.jpg" alt="Flower Petal Coaster">
     <h3>Flower Petal Coaster</h3>
 
-    <select>
-      <option>Select Color</option>
-      <option>Pink</option>
-      <option>Rainbow</option>
-      <option>White</option>
-    </select>
+    <div class="product-options">
+      <select>
+        <option>Select Color</option>
+        <option>Rainbow</option>
+        <option>Pink</option>
+      </select>
 
-    <select>
-      <option>Select Price</option>
-      <option>$8 – Single</option>
-      <option>$22 – Set of 3</option>
-    </select>
+      <select>
+        <option>Select Price</option>
+        <option>$8</option>
+      </select>
+    </div>
   </div>
 
   <div class="card">
-    <img src="flurry coaster.jpg" alt="Flurry Coaster">
+    <img src="flurry.jpg" alt="Flurry Coaster">
     <h3>Flurry Coaster</h3>
 
-    <select>
-      <option>Select Color</option>
-      <option>Neutral</option>
-      <option>Gray</option>
-    </select>
+    <div class="product-options">
+      <select>
+        <option>Select Color</option>
+        <option>Gray</option>
+        <option>Brown</option>
+      </select>
 
-    <select>
-      <option>Select Price</option>
-      <option>$8 – Single</option>
-    </select>
+      <select>
+        <option>Select Price</option>
+        <option>$8</option>
+      </select>
+    </div>
   </div>
 
   <div class="card">
-    <img src="helm coaster.jpg" alt="Helm Coaster">
+    <img src="helm.jpg" alt="Helm Coaster">
     <h3>Helm Coaster</h3>
 
-    <select>
-      <option>Select Color</option>
-      <option>Blue</option>
-      <option>Cream</option>
-    </select>
+    <div class="product-options">
+      <select>
+        <option>Select Color</option>
+        <option>Blue</option>
+        <option>White</option>
+      </select>
 
-    <select>
-      <option>Select Price</option>
-      <option>$8 – Single</option>
-      <option>$24 – Set of 4</option>
-    </select>
+      <select>
+        <option>Select Price</option>
+        <option>$8</option>
+      </select>
+    </div>
   </div>
 
-</div>
+</section>
 
 </body>
 </html>
