--- a/website/index.html
+++ b/website/index.html
@@ -5,110 +5,108 @@
   <title>Bumble & Yarn</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-<!-- NAVBAR -->
-<nav class="navbar">
-  <ul class="menu">
-    <li><a href="#">Home</a></li>
-
-    <li class="dropdown">
-      <a href="#">Shop ▾</a>
-      <ul class="dropdown-menu">
-        <li><a href="#">Coasters</a></li>
-      </ul>
-    </li>
-
-    <li class="dropdown">
-      <a href="#">About ▾</a>
-      <ul class="dropdown-menu">
-        <li><a href="#">Our Story</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-    </li>
-  </ul>
-</nav>
-
-<!-- HEADER -->
-<h1>Welcome to Bumble & Yarn</h1>
-<p class="subtitle">Handmade crochet and yarn creations.</p>
-
-<!-- PRODUCTS -->
-<section class="gallery">
-
-  <div class="card">
-    <img src="cactus.jpg" alt="Cactus Coaster">
-    <h3>Cactus Coaster</h3>
-
-    <div class="product-options">
-      <select>
-        <option>Select Color</option>
-        <option>Green</option>
-        <option>Pink</option>
-      </select>
-
-      <select>
-        <option>Select Price</option>
-        <option>$8</option>
-      </select>
+  <!-- NAVBAR -->
+  <nav class="navbar">
+    <div class="nav-logo">
+      <img src="Bumble And Yarn.jpg" alt="Bumble & Yarn Logo">
     </div>
-  </div>
 
-  <div class="card">
-    <img src="flower.jpg" alt="Flower Petal Coaster">
-    <h3>Flower Petal Coaster</h3>
+    <ul class="nav-menu">
+      <li><a href="#">Home</a></li>
 
-    <div class="product-options">
-      <select>
-        <option>Select Color</option>
-        <option>Rainbow</option>
-        <option>Pink</option>
-      </select>
+      <li class="dropdown">
+        <a href="#">Shop ▾</a>
+        <ul class="dropdown-menu">
+          <li><a href="#coasters">Coasters</a></li>
+        </ul>
+      </li>
 
-      <select>
-        <option>Select Price</option>
-        <option>$8</option>
-      </select>
+      <li class="dropdown">
+        <a href="#">About ▾</a>
+        <ul class="dropdown-menu">
+          <li><a href="#">Our Story</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </li>
+    </ul>
+  </nav>
+
+  <!-- HERO -->
+  <header class="hero">
+    <h1>Welcome to Bumble & Yarn</h1>
+    <p>Handmade crochet and yarn creations.</p>
+  </header>
+
+  <!-- COASTERS SECTION -->
+  <section id="coasters" class="products">
+
+    <div class="product-card">
+      <img src="cactus coaster.jpg" alt="Cactus Coaster">
+      <h3>Cactus Coaster</h3>
+      <div class="selectors">
+        <select>
+          <option>Select Color</option>
+          <option>Green</option>
+          <option>Pink</option>
+        </select>
+        <select>
+          <option>Select Price</option>
+          <option>$8</option>
+        </select>
+      </div>
     </div>
-  </div>
 
-  <div class="card">
-    <img src="flurry.jpg" alt="Flurry Coaster">
-    <h3>Flurry Coaster</h3>
-
-    <div class="product-options">
-      <select>
-        <option>Select Color</option>
-        <option>Gray</option>
-        <option>Brown</option>
-      </select>
-
-      <select>
-        <option>Select Price</option>
-        <option>$8</option>
-      </select>
+    <div class="product-card">
+      <img src="flower petal coaster.jpg" alt="Flower Petal Coaster">
+      <h3>Flower Petal Coaster</h3>
+      <div class="selectors">
+        <select>
+          <option>Select Color</option>
+          <option>Pink</option>
+          <option>Rainbow</option>
+        </select>
+        <select>
+          <option>Select Price</option>
+          <option>$8</option>
+        </select>
+      </div>
     </div>
-  </div>
 
-  <div class="card">
-    <img src="helm.jpg" alt="Helm Coaster">
-    <h3>Helm Coaster</h3>
-
-    <div class="product-options">
-      <select>
-        <option>Select Color</option>
-        <option>Blue</option>
-        <option>White</option>
-      </select>
-
-      <select>
-        <option>Select Price</option>
-        <option>$8</option>
-      </select>
+    <div class="product-card">
+      <img src="flurry coaster.jpg" alt="Flurry Coaster">
+      <h3>Flurry Coaster</h3>
+      <div class="selectors">
+        <select>
+          <option>Select Color</option>
+          <option>Gray</option>
+          <option>Rust</option>
+        </select>
+        <select>
+          <option>Select Price</option>
+          <option>$8</option>
+        </select>
+      </div>
     </div>
-  </div>
 
-</section>
+    <div class="product-card">
+      <img src="helm coaster.jpg" alt="Helm Coaster">
+      <h3>Helm Coaster</h3>
+      <div class="selectors">
+        <select>
+          <option>Select Color</option>
+          <option>Blue</option>
+        </select>
+        <select>
+          <option>Select Price</option>
+          <option>$8</option>
+        </select>
+      </div>
+    </div>
+
+  </section>
 
 </body>
 </html>
