--- a/website/products.html
+++ b/website/products.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Products – Bumble & Yarn</title>
+  <title>Products | Bumble & Yarn</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -20,7 +20,6 @@
         <a href="products.html">Coasters</a>
       </div>
     </div>
-
     <a href="index.html">Home</a>
   </nav>
 </header>
@@ -34,7 +33,7 @@
 
 <section class="products">
 
-  <!-- PRODUCT -->
+  <!-- FLURRY COASTER -->
   <div class="product-card">
     <img src="flurry coaster.jpg" alt="Flurry Coaster">
     <h3>Flurry Coaster</h3>
@@ -45,6 +44,7 @@
       <option>£7.20 – Set of 2</option>
       <option>£14.40 – Set of 4</option>
       <option>£21.60 – Set of 6</option>
+      <option>£28.80 – Set of 8</option>
     </select>
 
     <select>
@@ -52,7 +52,54 @@
       <option>Red</option>
       <option>Blue</option>
       <option>White</option>
+      <option>Black</option>
+      <option>Green</option>
       <option>Pink</option>
+    </select>
+
+    <button>Add to basket</button>
+  </div>
+
+  <!-- FLOWER PETAL COASTER -->
+  <div class="product-card">
+    <img src="flower petal coaster.jpg" alt="Flower Petal Coaster">
+    <h3>Flower Petal Coaster</h3>
+    <p>Special Flower Petal coasters made with love.</p>
+
+    <select>
+      <option>Select price</option>
+      <option>£7.20 – Set of 2</option>
+      <option>£14.40 – Set of 4</option>
+      <option>£21.60 – Set of 6</option>
+      <option>£28.80 – Set of 8</option>
+    </select>
+
+    <select>
+      <option>Select colour</option>
+      <option>Red</option>
+      <option>Blue</option>
+      <option>White</option>
+      <option>Yellow</option>
+      <option>Purple</option>
+      <option>Pink</option>
+    </select>
+
+    <button>Add to basket</button>
+  </div>
+
+  <!-- CACTUS -->
+  <div class="product-card">
+    <img src="cactus coaster.jpg" alt="Cactus">
+    <h3>The Cactus</h3>
+
+    <select>
+      <option>Select option</option>
+      <option>£8 – Set of 2 (no pot)</option>
+      <option>£23 – Set of 2 (with pot)</option>
+      <option>£16 – Set of 4 (no pot)</option>
+      <option>£31 – Set of 4 (with pot)</option>
+      <option>£24 – Set of 6 (no pot)</option>
+      <option>£39 – Set of 6 (with pot)</option>
     </select>
 
     <button>Add to basket</button>
