--- a/website/index.html
+++ b/website/index.html
@@ -15,11 +15,14 @@
 
   <nav>
     <div class="dropdown">
-      <button class="dropbtn">Shop ▾</button>
-      <div class="dropdown-content">
-        <a href="products.html">Coasters</a>
-      </div>
+      <details>
+        <summary>Shop ▾</summary>
+        <div class="dropdown-content">
+          <a href="products.html">Coasters</a>
+        </div>
+      </details>
     </div>
+
     <a href="#about">About</a>
   </nav>
 </header>
