--- a/website/index.html
+++ b/website/index.html
@@ -8,160 +8,42 @@
 
 <body>
 
-<!-- HEADER -->
 <header class="header">
   <div class="logo-area">
-    <img src="logo.png" alt="Bumble & Yarn Logo" class="logo">
+    <img src="Bumble And Yarn.jpg" alt="Bumble & Yarn Logo" class="logo">
     <h1>Bumble & Yarn</h1>
   </div>
 
   <nav class="nav">
     <ul>
-      <li><a href="#home">Home</a></li>
+      <li><a href="index.html">Home</a></li>
 
       <li class="dropdown">
-        <a href="#shop">Shop ▾</a>
+        <a href="#">Shop ▾</a>
         <ul class="dropdown-menu">
-          <li><a href="#coasters">Coasters</a></li>
-          <li><a href="#plants">Plants</a></li>
+          <li><a href="products.html">Coasters</a></li>
+          <li><a href="#">Plants</a></li>
         </ul>
       </li>
 
       <li><a href="#about">About</a></li>
-      <li class="basket">🧺</li>
     </ul>
   </nav>
 </header>
 
-<!-- HOME -->
-<section id="home" class="section">
+<section class="hero">
   <h2>Welcome to Bumble & Yarn</h2>
   <p>Handmade crochet items made with love.</p>
 </section>
 
-<!-- COASTERS PAGE -->
-<section id="coasters" class="section">
-  <h2>Matching Coasters and Place Mats</h2>
-  <p>
-    So, to start us off, we offer a selection of coasters for which we can
-    provide matching place mats. Once we establish a customer base, we can
-    increase the offering.
-  </p>
-
-  <div class="products">
-
-    <!-- FLURRY COASTER -->
-    <div class="product">
-      <img src="flurry.jpg" alt="Flurry Coaster">
-      <h3>Flurry Coaster</h3>
-      <p>A cute simple puff-like coaster for you to put your mugs on.</p>
-
-      <select>
-        <option>Select price</option>
-        <option>£7.20 – Set of 2</option>
-        <option>£14.40 – Set of 4</option>
-        <option>£21.60 – Set of 6</option>
-        <option>£28.80 – Set of 8</option>
-        <option>£36.00 – Set of 10</option>
-        <option>£43.20 – Set of 12</option>
-      </select>
-
-      <select>
-        <option>Select colour</option>
-        <option>Red</option>
-        <option>Blue</option>
-        <option>White</option>
-        <option>Black</option>
-        <option>Green</option>
-        <option>Orange</option>
-        <option>Purple</option>
-        <option>Pink</option>
-        <option>Yellow</option>
-        <option>Brown</option>
-        <option>Grey</option>
-      </select>
-
-      <button>Add to Basket</button>
-    </div>
-
-    <!-- FLOWER PETAL COASTER -->
-    <div class="product">
-      <img src="flower.jpg" alt="Flower Petal Coaster">
-      <h3>Flower Petal Coaster</h3>
-      <p>Special Flower Petal coasters made with love.</p>
-
-      <select>
-        <option>Select price</option>
-        <option>£7.20 – Set of 2</option>
-        <option>£14.40 – Set of 4</option>
-        <option>£21.60 – Set of 6</option>
-        <option>£28.80 – Set of 8</option>
-        <option>£36.00 – Set of 10</option>
-        <option>£43.20 – Set of 12</option>
-      </select>
-
-      <select>
-        <option>Select colour</option>
-        <option>Red</option>
-        <option>Blue</option>
-        <option>White</option>
-        <option>Black</option>
-        <option>Green</option>
-        <option>Orange</option>
-        <option>Purple</option>
-        <option>Pink</option>
-        <option>Yellow</option>
-        <option>Brown</option>
-        <option>Grey</option>
-      </select>
-
-      <button>Add to Basket</button>
-    </div>
-
-    <!-- HELM COASTER (BACK & CORRECT) -->
-    <div class="product">
-      <img src="helm.jpg" alt="Helm Coaster">
-      <h3>Helm Coaster</h3>
-      <p>This masterpiece is made to represent the Helm of a pirate ship.</p>
-
-      <select>
-        <option>Select price</option>
-        <option>£7.20 – Set of 2</option>
-        <option>£14.40 – Set of 4</option>
-        <option>£21.60 – Set of 6</option>
-        <option>£28.80 – Set of 8</option>
-        <option>£36.00 – Set of 10</option>
-        <option>£43.20 – Set of 12</option>
-      </select>
-
-      <select>
-        <option>Select colour</option>
-        <option>Red</option>
-        <option>Blue</option>
-        <option>White</option>
-        <option>Black</option>
-        <option>Green</option>
-        <option>Orange</option>
-        <option>Purple</option>
-        <option>Pink</option>
-        <option>Yellow</option>
-        <option>Brown</option>
-        <option>Grey</option>
-      </select>
-
-      <button>Add to Basket</button>
-    </div>
-
-  </div>
-</section>
-
-<!-- ABOUT -->
-<section id="about" class="section">
+<section id="about" class="about">
   <h2>About Us</h2>
   <p>
-    Bumble & Yarn is a crafty mother and son duo with a love for crochet and handmade items.
+    Bumble & Yarn is a crafty mother and son duo with a love for crochet
+    and handmade items.
   </p>
 </section>
 
 </body>
 </html>
+
