--- a/website/products.html
+++ b/website/products.html
@@ -2,109 +2,69 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Products | Bumble & Yarn</title>
+  <title>Coasters | Bumble & Yarn</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-<header class="navbar">
+<header class="header">
   <div class="logo-area">
-    <img src="Bumble And Yarn.jpg" alt="Bumble and Yarn Logo">
+    <img src="Bumble And Yarn.jpg" alt="Bumble & Yarn Logo" class="logo">
     <h1>Bumble & Yarn</h1>
   </div>
 
-  <nav>
-    <div class="dropdown">
-      <button class="dropbtn">Shop ▾</button>
-      <div class="dropdown-content">
-        <a href="products.html">Coasters</a>
-      </div>
-    </div>
-    <a href="index.html">Home</a>
+  <nav class="nav">
+    <ul>
+      <li><a href="index.html">Home</a></li>
+
+      <li class="dropdown">
+        <a href="#">Shop ▾</a>
+        <ul class="dropdown-menu">
+          <li><a href="products.html">Coasters</a></li>
+          <li><a href="#">Plants</a></li>
+        </ul>
+      </li>
+
+      <li><a href="#about">About</a></li>
+    </ul>
   </nav>
 </header>
 
-<section class="welcome">
-  <h2>Matching Coasters and Place Mats</h2>
-  <p>
-    We offer a selection of coasters for which we can provide matching place mats.
-  </p>
-</section>
+<section class="products-section">
+  <h2>Matching Coasters</h2>
 
-<section class="products">
+  <div class="products">
 
-  <!-- FLURRY COASTER -->
-  <div class="product-card">
-    <img src="flurry coaster.jpg" alt="Flurry Coaster">
-    <h3>Flurry Coaster</h3>
-    <p>A cute simple puff-like coaster for your mugs.</p>
+    <div class="product">
+      <img src="cactus.jpg" alt="Cactus Coaster">
+      <h3>Cactus Coaster</h3>
+      <select><option>Select Color</option></select>
+      <select><option>$8</option></select>
+    </div>
 
-    <select>
-      <option>Select price</option>
-      <option>£7.20 – Set of 2</option>
-      <option>£14.40 – Set of 4</option>
-      <option>£21.60 – Set of 6</option>
-      <option>£28.80 – Set of 8</option>
-    </select>
+    <div class="product">
+      <img src="flower.jpg" alt="Flower Petal Coaster">
+      <h3>Flower Petal Coaster</h3>
+      <select><option>Select Color</option></select>
+      <select><option>$8</option></select>
+    </div>
 
-    <select>
-      <option>Select colour</option>
-      <option>Red</option>
-      <option>Blue</option>
-      <option>White</option>
-      <option>Black</option>
-      <option>Green</option>
-      <option>Pink</option>
-    </select>
+    <div class="product">
+      <img src="flurry.jpg" alt="Flurry Coaster">
+      <h3>Flurry Coaster</h3>
+      <select><option>Select Color</option></select>
+      <select><option>$8</option></select>
+    </div>
 
-    <button>Add to basket</button>
+    <div class="product">
+      <img src="helm.jpg" alt="Helm Coaster">
+      <h3>Helm Coaster</h3>
+      <select><option>Select Color</option></select>
+      <select><option>$8</option></select>
+    </div>
+
   </div>
-
-  <!-- FLOWER PETAL COASTER -->
-  <div class="product-card">
-    <img src="flower petal coaster.jpg" alt="Flower Petal Coaster">
-    <h3>Flower Petal Coaster</h3>
-    <p>Special Flower Petal coasters made with love.</p>
-
-    <select>
-      <option>Select price</option>
-      <option>£7.20 – Set of 2</option>
-      <option>£14.40 – Set of 4</option>
-      <option>£21.60 – Set of 6</option>
-      <option>£28.80 – Set of 8</option>
-    </select>
-
-    <select>
-      <option>Select colour</option>
-      <option>Red</option>
-      <option>Blue</option>
-      <option>White</option>
-      <option>Yellow</option>
-      <option>Purple</option>
-      <option>Pink</option>
-    </select>
-
-    <button>Add to basket</button>
-  </div>
-
-  <!-- CACTUS -->
-  <div class="product-card">
-    <img src="cactus coaster.jpg" alt="Cactus">
-    <h3>The Cactus</h3>
-
-    <select>
-      <option>Select option</option>
-      <option>£8 – Set of 2 (no pot)</option>
-      <option>£23 – Set of 2 (with pot)</option>
-      <option>£16 – Set of 4 (no pot)</option>
-      <option>£31 – Set of 4 (with pot)</option>
-      <option>£24 – Set of 6 (no pot)</option>
-      <option>£39 – Set of 6 (with pot)</option>
-    </select>
-
-    <button>Add to basket</button>
-  </div>
-
 </section>
 
 </body>
