--- a/website/index.html
+++ b/website/index.html
@@ -10,19 +10,18 @@
 <!-- HEADER -->
 <header class="header">
   <div class="logo-area">
-    <img src="Bumble And Yarn.jpg" alt="Bumble & Yarn Logo" class="logo">
+    <img src="logo.jpg" alt="Bumble & Yarn Logo" class="logo">
     <h1>Bumble & Yarn</h1>
   </div>
 
   <nav class="nav">
     <ul>
-      <li><a href="#home">Home</a></li>
+      <li><a href="index.html">Home</a></li>
 
       <li class="dropdown">
-        <a href="#shop">Shop ▾</a>
+        <a href="#">Shop ▾</a>
         <ul class="dropdown-menu">
-          <li><a href="#coasters">Coasters</a></li>
-          <li><a href="#plants">Plants</a></li>
+          <li><a href="products.html">Coasters</a></li>
         </ul>
       </li>
 
@@ -32,82 +31,17 @@
 </header>
 
 <!-- HOME -->
-<section id="home" class="section">
+<section class="section">
   <h2>Welcome to Bumble & Yarn</h2>
   <p>Handmade crochet items made with love.</p>
-</section>
-
-<!-- COASTERS -->
-<section id="coasters" class="section">
-  <h2>Matching Coasters</h2>
-
-  <div class="products">
-
-    <div class="product">
-      <img src="cactus coaster.jpg" alt="Cactus Coaster">
-      <h3>Cactus Coaster</h3>
-      <select>
-        <option>Select Color</option>
-        <option>Green</option>
-        <option>Pink</option>
-      </select>
-      <select>
-        <option>$8</option>
-      </select>
-    </div>
-
-    <div class="product">
-      <img src="flower petal coaster.jpg" alt="Flower Petal Coaster">
-      <h3>Flower Petal Coaster</h3>
-      <select>
-        <option>Select Color</option>
-        <option>Pink</option>
-        <option>Yellow</option>
-      </select>
-      <select>
-        <option>$8</option>
-      </select>
-    </div>
-
-    <div class="product">
-      <img src="flurry coaster.jpg" alt="Flurry Coaster">
-      <h3>Flurry Coaster</h3>
-      <select>
-        <option>Select Color</option>
-        <option>Blue</option>
-        <option>Grey</option>
-      </select>
-      <select>
-        <option>$8</option>
-      </select>
-    </div>
-
-    <div class="product">
-      <img src="helm coaster.jpg" alt="Helm Coaster">
-      <h3>Helm Coaster</h3>
-      <select>
-        <option>Select Color</option>
-        <option>Navy</option>
-        <option>White</option>
-      </select>
-      <select>
-        <option>$8</option>
-      </select>
-    </div>
-
-  </div>
-</section>
-
-<!-- PLANTS -->
-<section id="plants" class="section">
-  <h2>Plants</h2>
-  <p>Plant products coming soon 🌱</p>
 </section>
 
 <!-- ABOUT -->
 <section id="about" class="section">
   <h2>About Us</h2>
-  <p>Bumble & Yarn is a mother and son crochet duo creating handmade items with care.</p>
+  <p>
+    Bumble & Yarn is a mother and son crochet duo creating handmade items with care.
+  </p>
 </section>
 
 </body>
