--- a/website/products.html
+++ b/website/products.html
@@ -5,63 +5,67 @@
   <title>Coasters | Bumble & Yarn</title>
   <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
 <header class="header">
   <div class="logo-area">
-    <img src="Bumble And Yarn.jpg" alt="Bumble & Yarn Logo" class="logo">
+    <img src="logo.jpg" alt="Bumble & Yarn Logo" class="logo">
     <h1>Bumble & Yarn</h1>
   </div>
 
   <nav class="nav">
     <ul>
       <li><a href="index.html">Home</a></li>
-
       <li class="dropdown">
         <a href="#">Shop ▾</a>
         <ul class="dropdown-menu">
           <li><a href="products.html">Coasters</a></li>
-          <li><a href="#">Plants</a></li>
         </ul>
       </li>
-
-      <li><a href="#about">About</a></li>
+      <li><a href="index.html#about">About</a></li>
     </ul>
   </nav>
 </header>
 
-<section class="products-section">
+<section class="section">
   <h2>Matching Coasters</h2>
 
   <div class="products">
 
     <div class="product">
-      <img src="cactus.jpg" alt="Cactus Coaster">
+      <img src="cactus coaster.jpg" alt="Cactus Coaster">
       <h3>Cactus Coaster</h3>
-      <select><option>Select Color</option></select>
-      <select><option>$8</option></select>
+      <div class="product-options">
+        <select><option>Select Color</option></select>
+        <select><option>$8</option></select>
+      </div>
     </div>
 
     <div class="product">
-      <img src="flower.jpg" alt="Flower Petal Coaster">
+      <img src="flower petal coaster.jpg" alt="Flower Petal Coaster">
       <h3>Flower Petal Coaster</h3>
-      <select><option>Select Color</option></select>
-      <select><option>$8</option></select>
+      <div class="product-options">
+        <select><option>Select Color</option></select>
+        <select><option>$8</option></select>
+      </div>
     </div>
 
     <div class="product">
-      <img src="flurry.jpg" alt="Flurry Coaster">
+      <img src="flurry coaster.jpg" alt="Flurry Coaster">
       <h3>Flurry Coaster</h3>
-      <select><option>Select Color</option></select>
-      <select><option>$8</option></select>
+      <div class="product-options">
+        <select><option>Select Color</option></select>
+        <select><option>$8</option></select>
+      </div>
     </div>
 
     <div class="product">
-      <img src="helm.jpg" alt="Helm Coaster">
+      <img src="helm coaster.jpg" alt="Helm Coaster">
       <h3>Helm Coaster</h3>
-      <select><option>Select Color</option></select>
-      <select><option>$8</option></select>
+      <div class="product-options">
+        <select><option>Select Color</option></select>
+        <select><option>$8</option></select>
+      </div>
     </div>
 
   </div>
